# JNI_Lecture_Demo

./: .gitignore
JNI-Demo/: build.gradle  settings.gradle
JNI-Demo-Lib/: CMakeLists.txt  library.h
JNI-Demo-Lib/Demo1/: CMakeLists.txt  Demo1.cpp  com_jni_test_Demo1.h
JNI-Demo-Lib/Demo2/: CMakeLists.txt  Demo2.cpp  com_jni_test_Demo2.h
JNI-Demo-Lib/calljava/: CMakeLists.txt  calljava.cpp  com_jni_calljava_TestCallJavaObject.h
JNI-Demo-Lib/dynamic_register/: CMakeLists.txt  com_jni_dynamic_register_TestDemo.h  dynamic_register.cpp
JNI-Demo-Lib/thread/: CMakeLists.txt  com_jni_thread_TestDemo.h  thread_jni.cpp
JNI-Demo/src/main/java/com/jni/calljava/: Dog.java  Person.java  Student.java  TestCallJavaObject.java  com_jni_calljava_TestCallJavaObject.h
JNI-Demo/src/main/java/com/jni/dynamic/register/: TestDemo.java
JNI-Demo/src/main/java/com/jni/test/: Demo1.java  Demo2.java  Person.java  Student.java
JNI-Demo/src/main/java/com/jni/thread/: TestDemo.java
